--- a/application/templates/list-spendings.html
+++ b/application/templates/list-spendings.html
@@ -5,8 +5,18 @@
             <h1>Spendings</h1>
             {% for spending in spendings %}
                 <hr>
-                <div class="spending-group my-3">
-                    <a href="{{ url_for('edit_spending', id=spending.id) }}"><p><strong>Title:</strong> {{ spending.title }} <strong>Description:</strong> {{ spending.description }} <strong>Date:</strong> {{ spending.date }} <strong>Installments:</strong> {{ spending.installments }} <strong>Cost:</strong> {{ spending.cost_per_installment }} <strong>Total:</strong> {{ spending.total }}</p></a>
+                <div class="spending-group my-3" style="width: fit-content;">
+                    <a href="{{ url_for('edit_spending', id=spending.id) }}">
+                        <p>
+                            <strong>{{ spending.id }} - Title:</strong> {{ spending.title }}
+                            {% if spending.installments > 0 %} 
+                                <strong>Installments Left:</strong> {{ spending.installments }} 
+                            {% else %}
+                                <strong>Status: </strong> Paid
+                            {% endif %}
+                            <strong>Total:</strong> R$ {{ spending.total }}
+                        </p>
+                    </a>
                 </div>
             {% endfor %}
         {% else %}
